@@ -405,6 +405,7 @@ You can find links to these tutorials and other documentation files below.
 <a href=ref/pygame_surfarray.html#array_alpha>pygame.surfarray.array_alpha</a> - get an array with a surface pixel alpha values<br>
 <a href=ref/pygame_surfarray.html#array_colorkey>pygame.surfarray.array_colorkey</a> - get an array with a surface colorkey values<br>
 <a href=ref/pygame_surfarray.html#blit_array>pygame.surfarray.blit_array</a> - quickly transfer an array to a Surface<br>
+<a href=ref/pygame_surfarray.html#make_surface>pygame.surfarray.make_surface</a> - create a new Surface from array data<br>
 <a href=ref/pygame_surfarray.html#map_array>pygame.surfarray.map_array</a> - map an array with RGB values into mapped colors<br>
 <a href=ref/pygame_surfarray.html#pixels2d>pygame.surfarray.pixels2d</a> - get a 2d reference array to a surface<br>
 <a href=ref/pygame_surfarray.html#pixels3d>pygame.surfarray.pixels3d</a> - get a 3d reference array to a surface<br>
